--- a/_posts/2018-02-08-February-08.md
+++ b/_posts/2018-02-08-February-08.md
@@ -1,1 +1,1 @@
-I have finished implementing the laplacian of Gaussian for peak detection. What it looks like to me is I have to try run the data with various standard deviation in order to see the strongest signal. I also have to normalize the ouputs in order to compare among the different standard deviation. Thus, for next week, I will normalize the output and try the various standard deviation. 
+I have finished implementing the laplacian of Gaussian for peak detection. What it looks like to me is I have to try running the data with various standard deviation in order to see the strongest signal. I also have to normalize the ouputs in order to compare among the different standard deviation. Thus, for next week, I will normalize the output and try the various standard deviation. 
