--- a/_posts/2018-02-23-February-23.md
+++ b/_posts/2018-02-23-February-23.md
@@ -1,2 +1,2 @@
 I was able to make a scatter plot of the average values of moning(6am - 12pm) data agaist the peak value that I have recorded from the LoG method. We can roughly see a linear trend from the graph, but I still need to figure out what to do with the data with no obvious peak. 
-![figure](https://github.com/hmc-cs-ctan/CREU-blog/blob/master/assets/morning_ave_peak.png)
+![figure]({{ site-url }}assets/morning_ave_peak.png)
